<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<!-- For app designs that have a lot of elements, it is recommended to use a scroll view
	 since there are Android phones that have small dimensions -->
	<ScrollView
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:id="@+id/label_sounds"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="40dp"
				android:text="@string/sounds_label"
				android:textSize="20dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:ignore="SpUsage"/>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/layout_animals"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="20dp"
				android:layout_marginTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/label_sounds">

				<Button
					android:id="@+id/btn_lizard"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/lizard"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toStartOf="@id/btn_tiger"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_tiger"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/tiger"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toStartOf="@id/btn_tuna"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toEndOf="@+id/btn_lizard"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_tuna"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/tuna"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toEndOf="@+id/btn_tiger"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_chicken"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:lines="1"
					android:text="@string/chicken"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toStartOf="@id/btn_snake"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/btn_lizard"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_snake"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/snake"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toStartOf="@id/btn_dog"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toEndOf="@+id/btn_chicken"
					app:layout_constraintTop_toTopOf="@+id/btn_chicken"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_dog"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/dog"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toEndOf="@+id/btn_snake"
					app:layout_constraintTop_toTopOf="@+id/btn_chicken"
					tools:ignore="SpUsage"/>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<TextView
				android:id="@+id/text_sound"
				android:layout_width="0dp"
				android:layout_height="150dp"
				android:layout_marginHorizontal="20dp"
				android:layout_marginTop="20dp"
				android:background="#B5A0DA"
				android:padding="10dp"
				android:textSize="24dp"
				android:textAlignment="center"
				android:textColor="@color/black"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/layout_animals"
				tools:ignore="SpUsage"/>

			<TextView
				android:id="@+id/label_species"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginTop="50dp"
				android:text="@string/species_label"
				android:textSize="20dp"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/text_sound"
				tools:ignore="SpUsage"/>

			<androidx.constraintlayout.widget.ConstraintLayout
				android:id="@+id/layout_sound"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="20dp"
				android:layout_marginTop="10dp"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@id/label_species">

				<Button
					android:id="@+id/btn_mammal"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/mammal"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toStartOf="@id/btn_reptile"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_reptile"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/reptile"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toStartOf="@id/btn_fish"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toEndOf="@+id/btn_mammal"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_fish"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:lines="1"
					android:text="@string/fish"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintHorizontal_chainStyle="spread"
					app:layout_constraintStart_toEndOf="@+id/btn_reptile"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="SpUsage"/>

				<Button
					android:id="@+id/btn_bird"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:lines="1"
					android:text="@string/bird"
					app:autoSizeMaxTextSize="18dp"
					app:autoSizeMinTextSize="8dp"
					app:autoSizeTextType="uniform"
					app:layout_constraintEnd_toEndOf="@id/btn_reptile"
					app:layout_constraintStart_toStartOf="@id/btn_reptile"
					app:layout_constraintTop_toBottomOf="@+id/btn_reptile"
					tools:ignore="SpUsage"/>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<TextView
				android:id="@+id/text_species"
				android:layout_width="0dp"
				android:layout_height="150dp"
				android:layout_marginHorizontal="20dp"
				android:layout_marginTop="20dp"
				android:textSize="24dp"
				android:background="#B5A0DA"
				android:padding="10dp"
				android:textAlignment="center"
				android:textColor="@color/black"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/layout_sound"
				tools:ignore="SpUsage"/>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>